--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,8 @@
         }],
         "permissions": [
             "activeTab",
-        "storage"
+        "storage",
+        "tabs"
         ]
 }
 
