作業一時保存．補講情報が反映されてない．スタイルがとても気にくわない．いらないやつの削除機能を付けないと，むしろ見にくい．．

--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,8 @@
         "permissions": [
             "activeTab",
         "storage",
-        "tabs"
+        "tabs",
+        "https://www.ead.tut.ac.jp/"
         ]
 }
 
