--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 2,
         "name": "TuT休講・補講Viewer",
+        "short_name": "TuT休補",
         "description": "自分の学年、学科に対応した休講情報を表示する",
-        "version":  "1.2.2",
+        "version":  "1.3.0",
         "icons": {
             "16": "images/icon/icon_16.png",
             "48": "images/icon/icon_48.png",
@@ -31,4 +32,3 @@
         "https://www.ead.tut.ac.jp/"
         ]
 }
-
